# hld_ift_analysis_helpers

./: README.md  how_to_use.md  oil_scan_how_to.md  pyproject.toml
docs/: hld_ift_training_bits.pptx  oil_scan_how_to.md  oil_scan_how_to.md.html  setting_up_new_system.md  wish_list.md
scripts/: collect_files_folders.py  droplet_stats.py  experiment_hough_transform.py  import_data_csv_r  montage_bits.py  rewriting_ift_calc.md
scripts/ift_data_extraction/: IFT_app_v12_2025-02-06.py  extract_ift_data_to_csv.py
scripts/visualize/: collect_ift_analysis_r  collect_images_by_type.sh  ift_analysis_r  json_file_explore_r  sample_images_r
src/hld_ift_analysis_helpers/: IFT_app_v12_2025_02_06_ap.py  droplet_stats.py  experiment_data_json_offline_ift.py  experiment_data_json_offline_ift__testing_process.py  experiment_data_json_offline_ift_custom.py  experiment_hough_transform.py  experiment_hough_transform_v2.py  experiment_optimization.py  json_data_extraction.py  json_data_extraction__example.py  locations.py  montage_bits.py  solution_repository_manipulations.py  test_needle2_bit.py  test_needle3_bit.py  test_needle4_bit.py
src/hld_ift_analysis_helpers/utils/: extract__bits_from_logs.py  extract_droplet_stats.py  extract_flow_characteristics.py  process_new.py
templates/: README.md
templates/surfactant_scan_OIW_template/: command_prompt_bits.md  recipes_solutions.json  scan_settings.json
templates/surfactant_scan_OIW_template/config/: solution_repository.json  (+3 more)
templates/surfactant_scan_template/: command_prompt_bits.md  recipes_solutions.json  scan_settings.json
(+32 files in other folders)
